--- a/index.html
+++ b/index.html
@@ -66,7 +66,16 @@
         <aside id="aside">
             
                 <div id="player12">
-                    <img src="./ass/img/placeholder-card-normal.webp" alt="player1">
+                    <div id="backgound">
+                        <img src="./ass/img/placeholder-card-normal.webp" alt="player1">
+                    </div>
+                    <div id="content">
+                        <div id="content-img"><img src="" alt="hi"></div>
+                        <div id="content-name">
+                            <h2>hi hi hi</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed, qui? Dolor minima aut error magnam numquam et dolore, autem aliquam debitis corporis, molestiae quae cumque esse repellat. Quaerat, est nisi.</p>
+                        </div>
+                    </div>
                 </div>
                 <div id="player13">
                     <img src="./ass/img/placeholder-card-normal.webp" alt="player2">
