--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <header id="header">
             <div id="team-info">
                 <div id="team-name">
-                    <h2>coders</h2>
+                    <marquee direction="">FUT </marquee>
                 </div>
                 <div id="team-logo">
-                    <img src="./ass/img/telechargement.webp" alt="img">
+                    <img src="./ass/img/logo.png" alt="img">
                 </div>
             </div>
         </header>
@@ -27,7 +27,7 @@
                 </div> -->
                 <div id="players">
                     <div id="player1">
-                        <img src="./ass/img/placeholder-card-normal.webp" alt="player1">
+                        <!-- <img src="./ass/img/placeholder-card-normal.webp" alt="player1"> -->
                     </div>
                     <div id="player2">
                         <img src="./ass/img/placeholder-card-normal.webp" alt="player2">
@@ -70,10 +70,10 @@
                         <img src="./ass/img/placeholder-card-normal.webp" alt="player1">
                    
                     <div id="content">
-                        <div id="content-img"><img src="" alt="hi"></div>
+                        <div id="content-img"><img src="./ass/img/téléchargement.png" alt="hi"></div>
                         <div id="content-name">
                             <h2>hi hi hi</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed, qui? Dolor minima aut error magnam numquam et dolore, autem aliquam debitis corporis, molestiae quae cumque esse repellat. Quaerat, est nisi.</p>
+                            <p>Lorem ipsum dolor sit amet .</p>
                         </div>
                     </div>
                 </div>
