--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
         </aside>
         <footer id="footer"></footer>
     </div>
+    <script src="./ass/js/script.js"></script>
 </body>
 
 </html>
