--- a/index.html
+++ b/index.html
@@ -54,20 +54,19 @@
         </main>
         <aside id="aside">
             
-            <!-- <div class="player-card">
+            <div class="player-card">
                 <div class="player-photo">
-                    <img src="path/to/player-photo.jpg" alt="Player Name">
+                    
                 </div>
                 <div class="player-info">
-                    <p class="player-name">Player Name</p>
-                    <p class="player-position">Position: Midfielder</p>
-                    <p class="player-rating">Rating: 85</p>
+                    <p class="player-name"></p>
+                    <p class="player-position"></p>
+                    <p class="player-rating"></p>
                     <div class="player-club">
-                        <img src="path/to/club-logo.png" alt="Club Logo">
-                        <span>Club Name</span>
+                        <span></span>
                     </div>
                 </div>
-            </div> -->
+            </div>
 <!--             
                 <div id="player13">
                 </div>
