--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./ass/css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
     <title>Document</title>
 </head>
 
@@ -13,7 +16,9 @@
         <header id="header">
             <div id="team-info">
                 <div id="team-name">
-                    <marquee direction="" style="color: white; background-color: green;">The full transcript from Chelsea head coach Enzo Maresca at the Voith-Arena as the  Italian previewed tomorrow evening's UEFA Conference League match against FC Heidenheim </marquee>
+                    <marquee direction="" style="color: white; background-color: green;">The full transcript from
+                        Chelsea head coach Enzo Maresca at the Voith-Arena as the Italian previewed tomorrow evening's
+                        UEFA Conference League match against FC Heidenheim </marquee>
                 </div>
                 <div id="team-logo">
                     <img src="./ass/img/logo.png" alt="img">
@@ -52,7 +57,7 @@
                 </div>
             </div>
         </main>
-        
+
         <aside id="aside">
             <div class="popup" id="popup">
                 sdhcfsgdchzgxs
@@ -75,16 +80,105 @@
         <aside id="aside2">
             <div id="ajoute">
                 <div id="ajoute-button">
-                    <button
-                  type="button"
-                  class="btn btn-primary mb-3"
-                  data-toggle="modal"
-                  data-target="#exampleModal"
-                >
-                  Add Player
-                </button>
+                    <button type="button" class="btn btn-primary mb-3" data-toggle="modal" data-target="#exampleModal">
+                        Add Player
+                    </button>
                 </div>
-                <div id="ajoute-player"></div>
+                <div id="ajoute-player">
+                    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
+                        aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-scrollable" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="exampleModalLabel">Ajouter un Neuveux PLayer</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+                                    <form id="playerForm">
+                                        <div class="mb-3">
+                                            <label for="position">position:</label>
+                                            <select id="position" class="form-select" required>
+                                                <option value="RW">RW</option>
+                                                <option value="ST">ST</option>
+                                                <option value="CM">CM</option>
+                                                <option value="LW">LW</option>
+                                                <option value="GK">GK</option>
+                                                <option value="CDM">CDM</option>
+                                                <option value="CB">CB</option>
+                                                <option value="LB">LB</option>
+                                                <option value="RB">RB</option>
+                                            </select>
+                                        </div>
+                                        <!-- end model -->
+                                        <div class="mb-3">
+                                            <label for="photo" class="form-label">photo:</label>
+                                            <input type="file" id="photo" class="form-control" accept="image/*" />
+                                        </div>
+                                        <div class="mb-3">
+                                            <label for="Name" class="form-label">Name:</label>
+                                            <input type="text" id="Name" class="form-control" required />
+                                        </div>
+                                        <div class="mb-3">
+                                            <label for="nationality" class="form-label">nationality:</label>
+                                            <input type="text" id="nationality" class="form-control" required />
+                                        </div>
+                                        <div class="mb-3">
+                                            <label for="flag" class="form-label">flag:</label>
+                                            <input type="text" id="flag" class="form-control" required />
+                                        </div>
+                                        <div class="mb-3">
+                                            <label for="club" class="form-label">club:</label>
+                                            <input type="text" id="club" class="form-control" required />
+                                        </div>
+                                        <div class="mb-3">
+                                            <label for="logo" class="form-label">logo:</label>
+                                            <input type="text" id="logo" class="form-control" required />
+                                        </div>
+                                        <div class="mb-3">
+                                            <label for="rating" class="form-label">rating:</label>
+                                            <input type="text" id="rating" class="form-control" required />
+                                        </div>
+
+                                        <div class="mb-3">
+                                            <label for="pace" class="form-label">pace:</label>
+                                            <input type="pace" id="pace" class="form-control" required />
+                                        </div>
+                                        <div class="mb-3">
+                                            <label for="shooting" class="form-label">shooting:</label>
+                                            <input type="text" id="shooting" class="form-control" required />
+                                        </div>
+                                        <div class="mb-3">
+                                            <label for="passing" class="form-label">passing:</label>
+                                            <input type="text" id="passing" class="form-control" required />
+                                        </div>
+                                        <div class="mb-3">
+                                            <label for="dribbling" class="form-label">dribbling:</label>
+                                            <input type="text" id="dribbling" class="form-control" required />
+                                        </div>
+                                        <div class="mb-3">
+                                            <label for="defending" class="form-label">defending:</label>
+                                            <input type="text" id="defending" class="form-control" required />
+                                        </div>
+                                        <div class="mb-3">
+                                            <label for="physical" class="form-label">physical:</label>
+                                            <input type="text" id="physical" class="form-control" required />
+                                        </div>
+                                    </form>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">
+                                        Close
+                                    </button>
+                                    <button type="button" onclick="addPlayer()" class="btn btn-primary">
+                                        Add player
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
 
         </aside>
@@ -94,6 +188,10 @@
     </div>
 
     <script src="./ass/js/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+
 </body>
 
 </html>
