--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./ass/css/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
 
     <title>Document</title>
 </head>
@@ -31,28 +32,33 @@
                      <img src="./ass/img/tiran.webp" alt="tiran"
                 </div> -->
                 <div id="players">
-                    <div id="player1">
-                    </div>
-                    <div id="player2">
-                    </div>
-                    <div id="player3">
-                    </div>
-                    <div id="player4">
-                    </div>
-                    <div id="player5">
-                    </div>
-                    <div id="player6">
-                    </div>
-                    <div id="player7">
-                    </div>
-                    <div id="player8">
-                    </div>
-                    <div id="player9">
-                    </div>
-                    <div id="player10">
-                    </div>
-                    <div id="player11">
-                    </div>
+                    <div id="player1" data-role="GK"><P style="color: aliceblue;">GK</P></div>
+                    <div id="player2" data-role="CB"><P style="color: aliceblue;">CB</P></div>
+                    <div id="player3" data-role="CB"><P style="color: aliceblue;">CB</P></div>
+                    <div id="player4" data-role="LB"><P style="color: aliceblue;">LB</P></div>
+                    <div id="player5" data-role="RB"><P style="color: aliceblue;">RB</P></div>
+                    <div id="player6" data-role="CDM"><P style="color: aliceblue;">CDM</P></div>
+                    <div id="player7" data-role="CDM"><P style="color: aliceblue;">CDM</P></div>
+                    <div id="player8" data-role="CM"><P style="color: aliceblue;">CM</P></div>
+                    <div id="player9" data-role="CM"><P style="color: aliceblue;">CM</P></div>
+                    <div id="player10" data-role="ST"><P style="color: aliceblue;">ST</P></div>
+                    <div id="player11" data-role="ST"><P style="color: aliceblue;">ST</P></div>
+                    <!-- <div id="player12" data-role="ST"></div>
+                    <div id="player13" data-role="LW"></div>
+                    <div id="player14" data-role="RW"></div>
+                    <div id="player15" data-role="LWB"></div>
+                    <div id="player16" data-role="RWB"></div>
+                    <div id="player17" data-role="LM"></div>
+                    <div id="player18" data-role="RM"></div>
+                    <div id="player19" data-role="CB"></div>
+                    <div id="player20" data-role="CB"></div>
+                    <div id="player21" data-role="CDM"></div>
+                    <div id="player22" data-role="CAM"></div>
+                    <div id="player23" data-role="ST"></div>
+                    <div id="player24" data-role="LW"></div>
+                    <div id="player25" data-role="RW"></div>
+                    <div id="player26" data-role="GK"></div> -->
+                    
 
                 </div>
             </div>
@@ -80,13 +86,14 @@
         <aside id="aside2">
             <div id="ajoute">
                 <div id="ajoute-button">
-                    <button type="button" class="btn btn-primary mb-3" data-toggle="modal" data-target="#exampleModal">
+                    <button type="button" class="btn btn-primary mb-3" data-bs-toggle="modal" data-bs-target="#exampleModal">
                         Add Player
                     </button>
+                    
                 </div>
                 <div id="ajoute-player">
                     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
-                        aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        aria-labelledby="exampleModalLabel" aria-hidden="false">
                         <div class="modal-dialog modal-dialog-scrollable" role="document">
                             <div class="modal-content">
                                 <div class="modal-header">
