--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
         </header>
         <main id="main">
             <div id="team-tactic">
-                <!-- <div class="tiran">
-                     <img src="./ass/img/tiran.webp" alt="tiran"
-                </div> -->
+
                 <div id="players">
                     <div id="player1" data-role="GK"><P style="color: aliceblue;">GK</P></div>
                     <div id="player2" data-role="CB"><P style="color: aliceblue;">CB</P></div>
@@ -65,9 +63,6 @@
         </main>
 
         <aside id="aside">
-            <div class="popup" id="popup">
-                sdhcfsgdchzgxs
-            </div>
             <div class="player-card" id="addbutton">
                 <div class="player-photo">
 
@@ -93,14 +88,15 @@
                 </div>
                 <div id="ajoute-player">
                     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
-                        aria-labelledby="exampleModalLabel" aria-hidden="false">
+                        aria-labelledby="exampleModalLabel" aria-hidden="true">
                         <div class="modal-dialog modal-dialog-scrollable" role="document">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalLabel">Ajouter un Neuveux PLayer</h5>
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <h5 class="modal-title" id="exampleModalLabel">New PLayer</h5>
+                                    <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                         <span aria-hidden="true">&times;</span>
-                                    </button>
+                                    </button> -->
+                                    <button type="button" id="buttonClose" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
                                 <div class="modal-body">
                                     <form id="playerForm">
