--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
         <header id="header">
             <div id="team-info">
                 <div id="team-name">
-                    <marquee direction="" style="color: white; background-color: rgb(16, 46, 199);"><img src="https://cdn.sofifa.net/players/158/023/25_120.png" alt=""><img src="https://cdn.sofifa.net/players/020/801/25_120.png" alt=""><img src="https://cdn.sofifa.net/players/192/985/25_120.png" alt=""><img src="https://cdn.sofifa.net/players/231/747/25_120.png" alt=""><img src="https://cdn.sofifa.net/players/203/376/25_120.png" alt=""><img src="" alt=""><img src="https://cdn.sofifa.net/players/205/452/25_120.png" alt=""><img src="https://cdn.sofifa.net/players/190/871/25_120.png" alt=""><img src="https://cdn.sofifa.net/players/209/331/25_120.png" alt=""><img src="https://cdn.sofifa.net/players/212/622/25_120.png" alt=""><img src="https://cdn.sofifa.net/players/200/389/25_120.png" alt=""><img src="" alt=""><img src="https://cdn.sofifa.net/players/177/003/25_120.png" alt=""> <img src="./ass/img/logo.png" alt=""></marquee>
+                    <marquee behavior="" style="color: white; background-color: rgb(16, 46, 199);"><img src="https://cdn.sofifa.net/players/158/023/25_120.png" alt=""><img src="https://cdn.sofifa.net/players/020/801/25_120.png" alt=""><img src="https://cdn.sofifa.net/players/192/985/25_120.png" alt=""><img src="https://cdn.sofifa.net/players/231/747/25_120.png" alt=""><img src="https://cdn.sofifa.net/players/203/376/25_120.png" alt=""><img src="" alt=""><img src="https://cdn.sofifa.net/players/205/452/25_120.png" alt=""><img src="https://cdn.sofifa.net/players/190/871/25_120.png" alt=""><img src="https://cdn.sofifa.net/players/209/331/25_120.png" alt=""><img src="https://cdn.sofifa.net/players/212/622/25_120.png" alt=""><img src="https://cdn.sofifa.net/players/200/389/25_120.png" alt=""><img src="" alt=""><img src="https://cdn.sofifa.net/players/177/003/25_120.png" alt=""> <img src="./ass/img/logo.png" alt=""></marquee>
                 </div>
-                <div id="team-logo">
-                    <img src="./ass/img/logo.png" alt="logo">
-                </div>
+
             </div>
         </header>
         <main id="main">
