--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                                         </div>
                                         <div class="mb-3">
                                             <label for="logo" class="form-label">logo:</label>
-                                            <input type="text" id="logo" class="form-control" required />
+                                            <input type="file" id="logo" class="form-control" accept="image/*" />
                                         </div>
                                         <div class="mb-3">
                                             <label for="rating" class="form-label">rating:</label>
