--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <header id="header">
             <div id="team-info">
                 <div id="team-name">
-                    <marquee behavior="" style="color: white; background-color: rgb(16, 46, 199);"><img src="https://cdn.sofifa.net/players/158/023/25_120.png" alt=""><img src="https://cdn.sofifa.net/players/020/801/25_120.png" alt=""><img src="https://cdn.sofifa.net/players/192/985/25_120.png" alt=""><img src="https://cdn.sofifa.net/players/231/747/25_120.png" alt=""><img src="https://cdn.sofifa.net/players/203/376/25_120.png" alt=""><img src="" alt=""><img src="https://cdn.sofifa.net/players/205/452/25_120.png" alt=""><img src="https://cdn.sofifa.net/players/190/871/25_120.png" alt=""><img src="https://cdn.sofifa.net/players/209/331/25_120.png" alt=""><img src="https://cdn.sofifa.net/players/212/622/25_120.png" alt=""><img src="https://cdn.sofifa.net/players/200/389/25_120.png" alt=""><img src="" alt=""><img src="https://cdn.sofifa.net/players/177/003/25_120.png" alt=""> <img src="./ass/img/logo.png" alt=""></marquee>
+                    <marquee id="here" behavior="" style="color: white; background-color: rgb(16, 46, 199);"><img src="https://cdn.sofifa.net/players/158/023/25_120.png" alt=""><img src="https://cdn.sofifa.net/players/020/801/25_120.png" alt=""><img src="https://cdn.sofifa.net/players/192/985/25_120.png" alt=""><img src="https://cdn.sofifa.net/players/231/747/25_120.png" alt=""><img src="https://cdn.sofifa.net/players/203/376/25_120.png" alt=""><img src="" alt=""><img src="https://cdn.sofifa.net/players/205/452/25_120.png" alt=""><img src="https://cdn.sofifa.net/players/190/871/25_120.png" alt=""><img src="https://cdn.sofifa.net/players/209/331/25_120.png" alt=""><img src="https://cdn.sofifa.net/players/212/622/25_120.png" alt=""><img src="https://cdn.sofifa.net/players/200/389/25_120.png" alt=""><img src="" alt=""><img src="https://cdn.sofifa.net/players/177/003/25_120.png" alt=""> <img src="./ass/img/logo.png" alt=""></marquee>
                 </div>
 
             </div>
@@ -52,7 +52,7 @@
         <aside id="aside2">
             <div id="ajoute">
                 <div id="ajoute-button">
-                    <button type="button" class="btn btn-success mb-3" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                    <button type="button" class="btn btn-success mb-3" style="background: url(/ass/img/Blue\ Lock\ Collection.jpg);" data-bs-toggle="modal" data-bs-target="#exampleModal">
                         Add Player
                     </button>                    
                 </div>
@@ -60,7 +60,7 @@
                     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
                         aria-labelledby="exampleModalLabel" aria-hidden="true">
                         <div class="modal-dialog modal-dialog-scrollable" role="document">
-                            <div class="modal-content">
+                            <div class="modal-content" style="background: url(/ass/img/new\ player.jpg);background-position: center;">
                                 <div class="modal-header">
                                     <h5 class="modal-title" id="exampleModalLabel">New PLayer</h5>
                                     <button type="button" id="buttonClose" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
