--- a/index.html
+++ b/index.html
@@ -14,7 +14,21 @@
         <header id="header">
             <div id="team-info">
                 <div id="team-name">
-                    <marquee id="here" behavior="" style="color: white; background-color: rgb(16, 46, 199);"><img src="https://cdn.sofifa.net/players/158/023/25_120.png" alt=""><img src="https://cdn.sofifa.net/players/020/801/25_120.png" alt=""><img src="https://cdn.sofifa.net/players/192/985/25_120.png" alt=""><img src="https://cdn.sofifa.net/players/231/747/25_120.png" alt=""><img src="https://cdn.sofifa.net/players/203/376/25_120.png" alt=""><img src="" alt=""><img src="https://cdn.sofifa.net/players/205/452/25_120.png" alt=""><img src="https://cdn.sofifa.net/players/190/871/25_120.png" alt=""><img src="https://cdn.sofifa.net/players/209/331/25_120.png" alt=""><img src="https://cdn.sofifa.net/players/212/622/25_120.png" alt=""><img src="https://cdn.sofifa.net/players/200/389/25_120.png" alt=""><img src="" alt=""><img src="https://cdn.sofifa.net/players/177/003/25_120.png" alt=""> <img src="./ass/img/logo.png" alt=""></marquee>
+                    <marquee id="here" behavior="" style="">
+                        <img src="https://cdn.sofifa.net/players/158/023/25_120.png" alt=""><img src="https://cdn.sofifa.net/flags/ar.png" alt=""><img src="https://cdn.sofifa.net/meta/team/239235/120.png" alt="">
+                        <img src="https://cdn.sofifa.net/players/020/801/25_120.png" alt=""><img src="https://cdn.sofifa.net/flags/pt.png" alt=""><img src="https://cdn.sofifa.net/meta/team/2506/120.png" alt="">
+                        <img src="https://cdn.sofifa.net/players/192/985/25_120.png" alt=""><img src="https://cdn.sofifa.net/flags/be.png" alt=""><img src="https://cdn.sofifa.net/meta/team/9/120.png" alt="">
+                        <img src="https://cdn.sofifa.net/players/231/747/25_120.png" alt=""><img src="https://cdn.sofifa.net/flags/fr.png" alt=""><img src="https://cdn.sofifa.net/meta/team/3468/120.png" alt="">
+                        <img src="https://cdn.sofifa.net/players/203/376/25_120.png" alt=""><img src="https://cdn.sofifa.net/flags/nl.png" alt=""><img src="https://cdn.sofifa.net/meta/team/8/120.png" alt="">
+                        <img src="https://cdn.sofifa.net/players/209/331/25_120.png" alt=""><img src="https://cdn.sofifa.net/flags/eg.png" alt=""><img src="https://cdn.sofifa.net/meta/team/8/120.png" alt="">
+                        <img src="https://cdn.sofifa.net/players/200/389/25_120.png" alt=""><img src="https://cdn.sofifa.net/flags/si.png" alt=""><img src="https://cdn.sofifa.net/meta/team/7980/120.png" alt="">
+                        <img src="https://cdn.sofifa.net/players/212/198/25_120.png" alt=""><img src="https://cdn.sofifa.net/flags/pt.png" alt=""><img src="https://cdn.sofifa.net/meta/team/14/120.png" alt="">
+                        <img src="https://cdn.sofifa.net/players/234/396/25_120.png" alt=""><img src="https://cdn.sofifa.net/flags/ca.png" alt=""><img src="https://cdn.sofifa.net/meta/team/503/120.png" alt="">
+                        <img src="https://cdn.sofifa.net/players/236/401/25_120.png" alt=""><img src="https://cdn.sofifa.net/flags/ma.png" alt=""><img src="https://cdn.sofifa.net/meta/team/14/120.png" alt="">
+                        <img src="https://cdn.sofifa.net/players/239/085/25_120.png" alt=""><img src="https://cdn.sofifa.net/flags/no.png" alt=""><img src="https://cdn.sofifa.net/meta/team/9/120.png" alt="">
+                        <img src="https://cdn.sofifa.net/players/230/621/25_120.png" alt=""><img src="https://cdn.sofifa.net/flags/it.png" alt=""><img src="https://cdn.sofifa.net/meta/team/591/120.png" alt="">
+                    </marquee>
+                    
                 </div>
 
             </div>
@@ -22,17 +36,17 @@
         <main id="main">
             <div id="team-tactic">
                 <div id="players">
-                    <div id="GK" data-role="GK"><P style="color: aliceblue;">GK</P></div>
-                    <div id="CB1" data-role="CB"><P style="color: aliceblue;">CB</P></div>
-                    <div id="CB2" data-role="CB"><P style="color: aliceblue;">CB</P></div>
-                    <div id="LB" data-role="LB"><P style="color: aliceblue;">LB</P></div>
-                    <div id="RB" data-role="RB"><P style="color: aliceblue;">RB</P></div>
-                    <div id="CDM1" data-role="CDM"><P style="color: aliceblue;">CDM</P></div>
-                    <div id="CDM2" data-role="CDM"><P style="color: aliceblue;">CDM</P></div>
-                    <div id="CM1" data-role="CM"><P style="color: aliceblue;">CM</P></div>
-                    <div id="CM2" data-role="CM"><P style="color: aliceblue;">CM</P></div>
-                    <div id="ST1" data-role="ST"><P style="color: aliceblue;">ST</P></div>
-                    <div id="ST2" data-role="ST"><P style="color: aliceblue;">ST</P></div>                   
+                    <div draggable="true" id="GK" data-role="GK"><P style="color: aliceblue;">GK</P></div>
+                    <div draggable="true" id="CB1" data-role="CB"><P style="color: aliceblue;">CB</P></div>
+                    <div draggable="true" id="CB2" data-role="CB"><P style="color: aliceblue;">CB</P></div>
+                    <div draggable="true" id="LB" data-role="LB"><P style="color: aliceblue;">LB</P></div>
+                    <div draggable="true" id="RB" data-role="RB"><P style="color: aliceblue;">RB</P></div>
+                    <div draggable="true" id="CDM1" data-role="CDM"><P style="color: aliceblue;">CDM</P></div>
+                    <div draggable="true" id="CDM2" data-role="CDM"><P style="color: aliceblue;">CDM</P></div>
+                    <div draggable="true" id="CM1" data-role="CM"><P style="color: aliceblue;">CM</P></div>
+                    <div draggable="true" id="CM2" data-role="CM"><P style="color: aliceblue;">CM</P></div>
+                    <div draggable="true" id="ST1" data-role="ST"><P style="color: aliceblue;">ST</P></div>
+                    <div draggable="true" id="ST2" data-role="ST"><P style="color: aliceblue;">ST</P></div>                   
                 </div>
             </div>
         </main>
@@ -50,19 +64,20 @@
             </div>
         </aside>
         <aside id="aside2">
-            <div id="ajoute">
+            <div id="ajoute" onsubmit="validateForm()" >
                 <div id="ajoute-button">
-                    <button type="button" class="btn btn-success mb-3" style="background: url(/ass/img/Blue\ Lock\ Collection.jpg);" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                    <button type="button" class="btn btn-primary mb-3"  data-bs-toggle="modal" data-bs-target="#exampleModal">
                         Add Player
                     </button>                    
                 </div>
                 <div id="ajoute-player">
-                    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
+                    <div class="modal fade"   id="exampleModal" tabindex="-1" role="dialog"
                         aria-labelledby="exampleModalLabel" aria-hidden="true">
                         <div class="modal-dialog modal-dialog-scrollable" role="document">
-                            <div class="modal-content" style="background: url(/ass/img/new\ player.jpg);background-position: center;">
+                            <div class="modal-content" style="background: url(/ass/img/new\ player.jpg);background-position: center; border-radius: 12px; border: solid #02cefc;">
                                 <div class="modal-header">
                                     <h5 class="modal-title" id="exampleModalLabel">New PLayer</h5>
+                                    <div id="message"></div>
                                     <button type="button" id="buttonClose" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
                                 <div class="modal-body">
@@ -84,7 +99,7 @@
                                         <!-- end model -->
                                         <div class="mb-3">
                                             <label for="photo" class="form-label">photo:</label>
-                                            <input type="file" id="photo" class="form-control" accept="image/*" />
+                                            <input type="text" id="photo" class="form-control" accept="image/*" />
                                         </div>
                                         <div class="mb-3">
                                             <label for="Name" class="form-label">Name:</label>
@@ -96,7 +111,7 @@
                                         </div>
                                         <div class="mb-3">
                                             <label for="logo" class="form-label">logo:</label>
-                                            <input type="file" id="logo" class="form-control" accept="image/*" />
+                                            <input type="text" id="logo" class="form-control" accept="image/*" />
                                         </div>
                                         <div class="mb-3">
                                             <label for="rating" class="form-label">rating:</label>
@@ -108,12 +123,14 @@
                                     <button type="button" class="btn btn-secondary" data-dismiss="modal">
                                         Close
                                     </button>
-                                    <button type="button" onclick="addPlayer()" class="btn btn-success">
+                                    <button type="submit"  onclick="addPlayer()" class="btn btn-primary">
                                         Add player
                                     </button>
                                 </div>
                             </div>
                         </div>
+                       
+
                     </div>
                 </div>
             </div>
