--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./ass/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="shortcut icon" href="/ass/img/Logo Character Blue Lock.jpg" type="image/x-icon">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <title>FUT</title>
 </head>
@@ -76,13 +77,13 @@
                         <div class="modal-dialog modal-dialog-scrollable" role="document">
                             <div class="modal-content" style="background: url(/ass/img/new\ player.jpg);background-position: center; border-radius: 12px; border: solid #02cefc;">
                                 <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalLabel">New PLayer</h5>
+                                    <h5 class="modal-title text-light" id="exampleModalLabel">New PLayer</h5>
                                     <div id="message"></div>
                                     <button type="button" id="buttonClose" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
                                 <div class="modal-body">
                                     <form id="playerForm">
-                                        <div class="mb-3">
+                                        <div class="mb-3 text-light">
                                             <label for="position">position:</label>
                                             <select id="position" class="form-select" required>
                                                 <option value="RW">RW</option>
@@ -97,23 +98,23 @@
                                             </select>
                                         </div>
                                         <!-- end model -->
-                                        <div class="mb-3">
+                                        <div class="mb-3 text-light">
                                             <label for="photo" class="form-label">photo:</label>
                                             <input type="text" id="photo" class="form-control" accept="image/*" />
                                         </div>
-                                        <div class="mb-3">
+                                        <div class="mb-3 text-light">
                                             <label for="Name" class="form-label">Name:</label>
                                             <input type="text" id="Name" class="form-control" required />
                                         </div>
-                                        <div class="mb-3">
+                                        <div class="mb-3 text-light">
                                             <label for="club" class="form-label">club:</label>
                                             <input type="text" id="club" class="form-control" required />
                                         </div>
-                                        <div class="mb-3">
+                                        <div class="mb-3 text-light">
                                             <label for="logo" class="form-label">logo:</label>
                                             <input type="text" id="logo" class="form-control" accept="image/*" />
                                         </div>
-                                        <div class="mb-3">
+                                        <div class="mb-3 text-light">
                                             <label for="rating" class="form-label">rating:</label>
                                             <input type="text" id="rating" class="form-control" required />
                                         </div>
